--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -4829,8 +4829,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
             box-shadow: none;
   }
   .navbar-collapse.collapse {
-    display: block !important;
+    display: inline-block !important;
     height: auto !important;
+    margin-top:100px;
     padding-bottom: 0;
     overflow: visible !important;
   }
